--- a/calamares/modules/unpackfs.conf
+++ b/calamares/modules/unpackfs.conf
@@ -1,5 +1,5 @@
 ---
 unpack:
-    -   source: "/run/live/medium/live/filesystem.squashfs"
+    -   source: "/run/live/medium/live/system.img"
         sourcefs: "squashfs"
         destination: ""
