--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Depends: calamares-mips64el,
          keyutils,
          qml-module-qtquick-window2,
          qml-module-qtquick2,
+         dracut,
          ${misc:Depends}
 Description: Debian theme and settings for the Calamares Installer
  Calamares is a generic installer framework for Linux distributions.
