--- a/calamares/modules/packages.conf
+++ b/calamares/modules/packages.conf
@@ -11,6 +11,4 @@ operations:
       - 'live-tools'
       - 'live-task-localisation'
       - 'live-task-recommended'
-      - 'calamares-settings-gxde-mips64el'
-      - 'calamares-mips64el'
-      - 'gxde-lang-selector'
+      - 'calamares'
